# cookiecutter-python-ml

./: Makefile  README.md  pyproject.toml
ml-project-template/: cookiecutter.json
ml-project-template/{{cookiecutter.project_name}}/: Makefile  pyproject.toml
ml-project-template/{{cookiecutter.project_name}}/src/config/: tables.yaml
