[tool.poetry]
name = "Python Project Template"
version = "0.1.0"
description = ""
authors = ["jimmfan <jimmfan@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.7"
cookiecutter = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
